fix horizontal scroll

--- a/src/design/organisms/Header/Header.scss
+++ b/src/design/organisms/Header/Header.scss
@@ -7,7 +7,6 @@
   border-bottom: $element-border-default;
   margin-bottom: 24px;
   position: sticky;
-  width: 100vw;
   top: 0;
   z-index: 11;
 
